fix: header didnot fit in screen

--- a/frontend/static/css/header.css
+++ b/frontend/static/css/header.css
@@ -1,7 +1,9 @@
 .header {
   width: 100%;
+  max-width: 100vw;
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .header__month {
